# Nmap Changelog ($Id$); -*-text-*-

o Made a number of performance tweaks, such as:
  o increase host group sizes in many cases, so Nmap will now commonly
    scan 64 hosts at a time rather than 30
  o align host groups with common network boundaries, such as /24 or
   /25
  o Increase maximum per-target port-scan ping frequency to one every
    1.25 seconds rather than every five. Port scan pings happen
    against heavily firewalled hosts and the like when Nmap is not
    receiving enough responses to normal scan to properly calculate
    timing variables and detect packet drops.

o Added the undocumented (except here) --nogcc option which disables
  global/group congestion control algorithms and so each member of a
  scan group of machines is treated separately.  This is just an
  experimental option for now. [Fyodor]

o Added a new NSE Unpwdb (username/password database) library for easily
  obtaining usernames or passwords from a list.  The functions usernames()
  and passwords() return a closure which returns a new list entry with
  every call, or nil when the list is exhausted.  You can specify your
  own username and/or password lists via the script arguments userdb
  and passdb, respectively. [Kris]

o The Ports/Hosts display in Zenmap now has different colors for open
  and closed ports. [Vladimir]

o Fixed the "resolution errors not showing up" bug. Actually, from now
  on, all errors will be displayed properly in the Zenmap window, since
  stderr is also redirected there (until now, only stdout was
  displayed). [Vladimir]

o NSE now works with the Ping Scan (-sP) to execute host scripts. [Kris]

o [NSE] nse_string has been removed and equivalent, cleaner, procedures
  have been moved to nse_main and nse_nsock. [Patrick]

o [NSE] Case insensitive categories. [Patrick]

o [NSE] Porttests and Hosttests tables are now in the Lua registry where
  they belong. [Patrick]

o [NSE] Each thread for a script gets its own action closure (and