@@ -1,4 +1,4 @@
-# Nmap Changelog ($Id$); -*-text-*-
+﻿# Nmap Changelog ($Id$); -*-text-*-
 
 o Made a number of performance tweaks, such as:
   o increase host group sizes in many cases, so Nmap will now commonly
@@ -96,6 +96,9 @@ o Nmap's makefile will now install menu items for launching zenmap as
   a privileged or non-privileged process on linux. This will mainly
   effect people who install nmap and zenmap directly from the source
   code. [Michael]
+
+o Nmap will no longer misreport a localhost-responce during -PN scans
+  [Michael]
 
 Nmap 4.68 [2008-6-28]
 
